SERVER-22874 network asio operation embeds literal tabs and newlines into strings